# arcore-android-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build.gradle  settings.gradle
.allstar/: binary_artifacts.yaml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/workflows/: Android-CI-release.yml  Android-CI.yml  daily  gradle-wrapper-validation.yml  merge-upstream.yml
all-in-one-sample/: build.gradle  google-services.gut.json  google-services.json  google-services.json.enc
assets/: canonical_face_mesh.fbx
gradle/wrapper/: gradle-wrapper.properties
libraries/: BUILD  NOTICE  arcore_client.aar  readme.md
libraries/glm/: ext.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x4.hpp  matrix.hpp  packing.hpp  vec3.hpp  vector_relational.hpp
libraries/include/: arcore_c_api.h
media/augmented_image_database/: README
samples/: build.gradle  settings.gradle
samples/all-in-one/: build.gradle
samples/augmented_faces_java/: .gitignore  build.gradle
samples/augmented_image_c/: .gitignore  (+1 more)
samples/hello_ar_c/app/: CMakeLists.txt  build.gradle
samples/hello_ar_c/app/src/main/: AndroidManifest.xml
samples/hello_ar_c/app/src/main/assets/shaders/: face_object.frag  plane.frag  plane.vert  point_cloud.vert
samples/hello_ar_c/app/src/main/cpp/: background_renderer.cc  background_renderer.h  glm.h  hello_ar_application.cc  hello_ar_application.h  jni_interface.cc  jni_interface.h  obj_renderer.cc  obj_renderer.h  plane_renderer.cc  plane_renderer.h  point_cloud_renderer.cc  point_cloud_renderer.h  texture.cc  texture.h  util.cc  util.h
samples/hello_ar_c/app/src/main/java/com/google/ar/core/examples/c/helloar/: CameraPermissionHelper.java  DepthSettings.java  HelloArActivity.java  InstantPlacementSettings.java  JniInterface.java
samples/hello_ar_c/app/src/main/res/layout/: activity_main.xml
samples/hello_ar_c/app/src/main/res/values/: strings.xml  styles.xml
signing/: cleanup.sh  decrypt.sh  release.keystore  release.keystore.enc
tools/: generate_dfg_texture.py
(+782 files in other folders)
